# IKT103-Assignmnets

assignment_3_1/SQLiteCpp/src/: Savepoint.cpp  Statement.cpp  Transaction.cpp
assignment_4_1/: CMakeLists.txt  main.cpp
